clusters/on-prem/core/uptime-kuma/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  serviceName: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:latest@sha256:96510915e6be539b76bcba2e6873591c67aca8a6075ff09f5b4723ae47f333fc
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: uptime-kuma-volume
      volumes:
      - name: uptime-kuma-volume
        persistentVolumeClaim:
          claimName: uptime-kuma-data-pvc
