clusters/on-prem/core/uptime-kuma/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uptime-kuma-ingress
    namespace: uptime-kuma
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:hx+xtGhgTqHNTP+n7LHcmC+wORut8eDmSihuiw==,iv:zJ3uNOQ06gD5oY3p0FuatYcwPNK1qlKX0iugowkoeP8=,tag:hYmxEAdLdLF5C6KJWsl+SQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:Wlbyt/mu7srVe7GbZZX1xclNMjastObQQaENow==,iv:zFQT+PCppsK1qruvH4pMxEPuBFjq6J6ZptjP895n97k=,tag:HoKQQHgpvHxvFdx/EFxgZA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: uptime-kuma-service
                        port:
                            number: 3001
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3RkZKcTZoMGdLUnlKZWh3
[...]
            92Bac63PidKhVb7w9LhIaUOG0Lb/o3xmzSjjC6PTnv8lEPyR47XiYw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-01-04T19:59:17Z"
    mac: ENC[AES256_GCM,data:MEVQ9QHh/UqkVlokZqw8R3ylXlMRUa6eddwQzFYahPy5nASYGhmZ+DkGa3zXsq0Bc/8L+mJkFQ9d34JsmOsyP40/0xAy+AX2CtQhQaMg3UePLpoeBlseT/FLM3R40M/ikAdnqTTqSw0Lvitr5R1j3LtXz45vghD8ORktIwA7hHo=,iv:HGShiQx0w4qMD+TvWotbGvrEH3eWscpxeN8J8fxdoM4=,tag:2GOxLNtEKnlXbMVNkMdkpg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.8.1
